K8S/auth-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: authnpservice-srv
spec:
  type: NodePort
  selector:
    app: authservice
  ports:
    - name: authservice
      protocol: TCP
      port: 8080
      targetPort: 8080
